@@ -1,4 +1,5 @@
 
+  * Now from the label editor can be added or deleted the labels too
   * Fixed a bug when Start Minimized was enabled and not the TaskBar icon
   * Implemented the option to add a random track if the playlist is empty
   * Fixed bug in manual cover downloader when the results where below 10
